using System;
using System.Collections.Generic;
using System.Linq;
using System.Text;
using System.Threading.Tasks;

namespace HBYS_Deskop_APP.BilgiSınıflari
{
    public record class DoktorGiris
    {
        public string UserName { get; set; }
        public string Password { get; set; }
    }
}
